change: build_number 13

--- a/cicd/values.yaml
+++ b/cicd/values.yaml
@@ -4,7 +4,7 @@
 
 backend:
   image: manjunath728/demo-backend
-  tag: "1"
+  tag: "${BUILD_NUMBER}"
   port: 3000
   env:
     DB_HOST: "db"
@@ -14,7 +14,7 @@ backend:
 
 frontend:
   image: manjunath728/demo-frontend
-  tag: "1"
+  tag: "${BUILD_NUMBER}"
   port: 80
   env:
     API_SERVICE_HOST: "backend:3000"
